# expo-everywhere

./: LICENSE  README.md  app.json  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
