[package]
name = "Expo-Everywhere-v1"
version = "1.0.0"
description = "Expo Everywhere is a cross-platform application that allows you to run Expo projects on various platforms seamlessly."
authors = ["younes-ammari"]
license = "MIT"
repository = "https://github.com/younes-ammari/expo-everywhere"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.6.2", features = [] }
tauri-plugin-log = "2"
